--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>World Clock</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/png" href="worldclock_icon.png">
+  <link rel="icon" type="image/png" href="flags/worldclock.png">
 </head>
 
 <body>
   <div id="search-and-convert">
+    <button id="themeToggle">🌙</button>
     <input type="text" id="searchBox" placeholder="Search country..." />
     <button id="openConverterBtn">🛠️ Time Converter</button>
   </div>
