--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>World Clock</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/png" href="flags/worldclock.png">
+  <link rel="icon" type="image/png" href="worldclock.png">
 </head>
 
 <body>
@@ -43,3 +43,4 @@
 </body>
 
 </html>
+
