--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>World Clock</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/png" href="worldclock.png">
+  <link rel="icon" type="image/png" href="worldclock_icon.png">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
   <div id="converterModal" class="modal">
     <div class="modal-content">
       <span id="closeModalBtn" class="close">&times;</span>
-      <!-- Masukin isi converter di sini -->
+
       <div id="converterBody">
         <div class="multi-converter">
           <h2>Multi Timezone Converter</h2>
@@ -43,4 +43,5 @@
 </body>
 
 </html>
+
 
